---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: ????
  Features:
    - Added option to reorder item groups
    - Reorders Miniloaders
    - Reorders Deadlock loaders/beltboxes
    - Reorders AAI loaders
    - Reorders Loader Redux loaders
  Locale:
    - Added description for new setting
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 2024-01-14
  Features:
    - Splitter and Underground items are now recolored
    - Deadlock items are now recolored
    - Miniloader items are now recolored
  Changes:
    - Added some debug files to the package ignore
---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 2024-01-14
  Features:
    - Added Loader Redux support
---------------------------------------------------------------------------------------------------
Version: 0.7.2
Date: 2024-01-12
  Changes:
    - Added a package.ignore to the info.json
---------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: 2024-01-08
  Architecture:
    - Reorganized the tinting code
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2024-01-08
  Locale:
    - Updated mod info
  Major Features:
    - Added AAI Loaders support
  Bugfixes:
    - Removed saying it supports Loader Redux because that's currently not true
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2024-01-08
  Changes:
    - Added changelog
    - Removed unused stuff from the package
    - Added Owoshima and Pankeko UB support