@@ -3,6 +3,7 @@ Version: 0.9.0
 Date: ????
   Features:
     - Added option to reorder item groups
+    - Reorders belts/splitters/undergrounds
     - Reorders Miniloaders
     - Reorders Deadlock loaders/beltboxes
     - Reorders AAI loaders
